# Leapmotion_Modern_opengl_visualizer

./: Leap_install_instructions.txt  README  README.md  TODO
AR/: CMakeLists.txt
AR/src/: Makefile  main.cpp
Leap_motion_get_vertices/src/: Makefile  main.cpp
Leap_motion_get_vertices/src/backups/: main_backup3.cpp  main_backup4.cpp
palm_visualizer/src/: Makefile  main.cpp
src/: -Wall  Makefile  Shader.h  draw_cuboid.h  finger_joints.h  main  main.cpp  main_backup.cpp
src/backups/: main_backup1.cpp
